--- a/css/style.css
+++ b/css/style.css
@@ -122,20 +122,21 @@ hr {
 }
 
 #cta {
- position: absolute;
- bottom: 0;
- right: 0;
+ position: fixed;
+ bottom: 2rem;
+ right: 2rem;
  padding: 2.5rem;
- background: var(--white-clr);
+ background: var(--green-clr);
  border-radius: 50%;
  color: var(--grey-clr);
  font-size: 2rem;
- margin-bottom: 20px;
  transition: all ease 0.6s;
+ z-index: 1;
 }
 
 #cta:hover {
-  background: var(--green-clr);
+  background: var(--grey-clr);
+  color: var(--dark-clr);
   transform: scale(1.1);
 }
 
@@ -454,6 +455,7 @@ input:focus {
   text-decoration: none;
   margin-bottom: 8px;
   font-size: 0.9rem;
+  color: var(--dark-clr);
 }
 
 .trademark {
@@ -614,7 +616,9 @@ input:focus {
 
   #cta {
     padding: 1rem;
-    margin: 1rem;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 2;
   }
 
   .projects {
